--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello, Wrold!</h1>
+<!doctype html>
+<html>
+	<head>
+		<title>My Site</title>
+	</head>
+	<body>
+		<h1>Cookies</h1>
+		<h2>Lemonade</h2>
+
+	</body>
+</html>
