Added new html tags like img and lists

--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
 		<title>My Site</title>
 	</head>
 	<body>
+
 		<h1>Cookies</h1>
 		<h2>Lemonade</h2>
+		<br>
+		<p>this is a paragraph<p>
+		<p>this is a cooler paragraph</p>
+
+		<ul>
+			<li>blah</li>
+			<li>blah2</li>
+			<li>blah2
+				<ul>
+					<li>another one</li>
+					<li>
+						<img src="https://lh3.googleusercontent.com/-GA9U-aqaVd0/U0rI0G78kRI/AAAAAAAAAHs/hI9zbcBPO5s/w426-h284/yo-dawg-i-heard-you-like-roleplaying-so-i-put-a-roleplay-in-your-roleplay-so-you-can-roleplay-while-you-roleplay.jpg">
+					</li>
+					<li><a target="_blank" href="https://www.google.com">Check out google</a></li>
+				</ul>
+			</li>
+		</ul>
 
 	</body>
 </html>
